--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "guild": "796020701635149895",
-    "token": "ODM0NDYyNjAwNTYwNTA4OTQw.YIBP2w.Dh_QQO48CCJ8rDhDyPJCYqTQitY",
+    "token": "",
     "channels": {
         "roles": 834445924309794876,
         "polls": 835176447504285737,
